--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity
           android:name="org.locer.in.IntroActivity"
           android:exported="false" />
+        <activity android:name="org.locer.in.FirstScreen"/>
     </application>
 
 </manifest>
