--- a/.github/label_issue.yml
+++ b/.github/label_issue.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
       - uses: actions/github-script@v3
         with:
+        github-token: ${{secrets.TOKEN}}
           script: |
             github.issues.addLabels({
               issue_number: context.issue.number,
